# aud

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release-binaries.yml  release-plz.yml  rust.yml
src/: config.rs  controls.rs  main.rs  player.rs  spectrum.rs  ui.rs  waveform.rs
